--- a/src/sherpa.adapter/Sherpa.Adapter.csproj
+++ b/src/sherpa.adapter/Sherpa.Adapter.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.9.0" />
+  </ItemGroup>
+
 </Project>
