--- a/src/sherpa.adapter/Sherpa.Adapter.csproj
+++ b/src/sherpa.adapter/Sherpa.Adapter.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\sherpa\Sherpa.csproj" />
+  </ItemGroup>
+
 </Project>
